db access works now

--- a/application/views/scripts/businesspartner/_businesspartnerRow.phtml
+++ b/application/views/scripts/businesspartner/_businesspartnerRow.phtml
@@ -1,7 +1,7 @@
 <tr>
 	<td><?php echo $this->escape($this->par_pk); ?></td>
 	<td>
-		<a href="<?php echo $this->url(array('action'=>'partnerDetail', 'pid'=>$this->par_pk)); ?>">
+		<a href="<?php echo $this->url(array('action'=>'businesspartnerDetail', 'pid'=>$this->par_pk)); ?>">
 			<?php echo $this->escape($this->par_name); ?>
 		</a>
 	</td>
