--- a/application/views/scripts/reportingdiary/index.phtml
+++ b/application/views/scripts/reportingdiary/index.phtml
@@ -1,3 +1,3 @@
 <div class="well">
-	<a href="<?php echo $this->url(array('controller'=>'partner', 'action'=>'index')); ?>">got to partner list</a>
+	<a href="<?php echo $this->url(array('controller'=>'businesspartner', 'action'=>'index')); ?>">got to partner list</a>
 </div>
