--- a/application/views/layouts/layout.phtml
+++ b/application/views/layouts/layout.phtml
@@ -4,6 +4,7 @@
 	<?php echo $this->headMeta(); ?>
 	<?php echo $this->headTitle(); ?>
 	<?php echo $this->headLink(); ?>
+	<?php echo $this->headScript(); ?>
 	
 </head>
 <body>
