MVC für verschiedene Preperation views hinzugefügt

--- a/application/views/scripts/reportingdiary/index.phtml
+++ b/application/views/scripts/reportingdiary/index.phtml
@@ -1,3 +1,4 @@
 <div class="well">
-	<a href="<?php echo $this->url(array('controller'=>'businesspartner', 'action'=>'index')); ?>">got to partner list</a>
-</div>
+	<a href="<?php echo $this->url(array('controller'=>'businesspartner', 'action'=>'index')); ?>">got to partner list</a> <br>
+	<a href="<?php echo $this->url(array('controller'=>'preparation', 'action'=>'index')); ?>">list requirements</a>
+	</div>
