Array Ausgabe für Preparation Status

--- a/application/views/scripts/preparation/statuschart.phtml
+++ b/application/views/scripts/preparation/statuschart.phtml
@@ -1,1 +1,10 @@
-<div class="well">Chart belongs here!</div>
+<div class="well">
+	<?php if($this->statuslist) : ?>
+		<?php foreach ($this->statuslist as $status) : ?>
+			[<?php echo $this->escape($status['status']); ?>]
+			<?php echo $this->escape($status['amount']); ?><br />
+		<?php endforeach; ?>
+	<?php else : ?>
+		<div class="alert">Konnte Status-List nicht lesen :-(</div>
+	<?php endif; ?>
+</div>
