view variables renamed to have a clear notation

--- a/application/views/scripts/preparation/index.phtml
+++ b/application/views/scripts/preparation/index.phtml
@@ -3,7 +3,7 @@
 
 <br> <br>
 
-	<?php if($this->preparation) : ?>
+	<?php if($this->preparationlist) : ?>
 		<table class="table table-striped">
 			<thead>
 				<tr>
@@ -14,7 +14,7 @@
 				</tr>
 			</thead>
 			<tbody>
-				<?php echo $this->partialLoop('preparation/_preparationRow.phtml', $this->preparation); ?>
+				<?php echo $this->partialLoop('preparation/_preparationRow.phtml', $this->preparationlist); ?>
 			</tbody>
 			<tcaption><h6>Requirements</h6></tcaption>
 		</table>
