Erstes Chart läuft

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -1,1 +1,4 @@
-<div class="well">Bin noch da!</div>
+<div class="well">
+	Bin noch da!<br>
+	<a href="<?php echo $this->url(array('controller'=>'preparation', 'action'=>'statuschart')); ?>">Chart</a>
+</div> 
