--- a/application/views/scripts/preparation/statuschart.phtml
+++ b/application/views/scripts/preparation/statuschart.phtml
@@ -1,72 +1,32 @@
-<?php $this->headScript()->captureStart() ?>
-$(function () {
-    var chart;
-    $(document).ready(function() {
-        chart = new Highcharts.Chart({
-            chart: {
-                renderTo: 'container',
-                type: 'column'
-            },
-            title: {
-                text: 'Stacked column chart'
-            },
-            xAxis: {
-                categories: ['Apples', 'Oranges', 'Pears', 'Grapes', 'Bananas']
-            },
-            yAxis: {
-                min: 0,
-                title: {
-                    text: 'Total fruit consumption'
-                },
-                stackLabels: {
-                    enabled: true,
-                    style: {
-                        fontWeight: 'bold',
-                        color: (Highcharts.theme && Highcharts.theme.textColor) || 'gray'
-                    }
-                }
-            },
-            legend: {
-                align: 'right',
-                x: -100,
-                verticalAlign: 'top',
-                y: 20,
-                floating: true,
-                backgroundColor: (Highcharts.theme && Highcharts.theme.legendBackgroundColorSolid) || 'white',
-                borderColor: '#CCC',
-                borderWidth: 1,
-                shadow: false
-            },
-            tooltip: {
-                formatter: function() {
-                    return '<b>'+ this.x +'</b><br/>'+
-                        this.series.name +': '+ this.y +'<br/>'+
-                        'Total: '+ this.point.stackTotal;
-                }
-            },
-            plotOptions: {
-                column: {
-                    stacking: 'normal',
-                    dataLabels: {
-                        enabled: true,
-                        color: (Highcharts.theme && Highcharts.theme.dataLabelsColor) || 'white'
-                    }
-                }
-            },
-            series: [{
-                name: 'John',
-                data: [5, 3, 4, 7, 2]
-            }, {
-                name: 'Jane',
-                data: [2, 2, 3, 2, 1]
-            }, {
-                name: 'Joe',
-                data: [3, 4, 4, 2, 5]
-            }]
-        });
-    });
-});
-<?php $this->headScript()->captureEnd() ?>
+<?php
+// HighRoller: include class files
+ require_once('HighRoller_1.0.5/HighRoller.php');
+ require_once('HighRoller_1.0.5/HighRollerSeriesData.php');
+ require_once('HighRoller_1.0.5/HighRollerColumnChart.php');
+ //require_once 'Zend/Application.php';
+ 
+ $columnchart = new HighRollerColumnChart();
+ $columnchart->title->text = 'Column Chart';
+ $columnchart->yAxis->title->text = 'Preparation';
+ $columnchart->yAxis->stackLabels->enabled = true;
+ $columnchart->chart->renderTo ='container';
+ $columnchart->plotOptions->column->stacking = 'normal';
+
+ $columnchart->xAxis->categories = array('Preparation');
+ 
+ foreach ($this->statuslist as $status) :
+ 	$series = new HighRollerSeriesData();
+	$series->addName($this->escape($status['status']))->addData(array(intval($this->escape($status['amount']))));
+	$columnchart->addSeries($series);
+ endforeach;
+?>
+
+
+<script type="text/javascript">
+  $(document).ready(function(){
+    <?php echo $columnchart->renderChart()?>
+  });
+</script>
 
 <div class="well">
 	<?php if($this->statuslist) : ?>
