--- a/application/views/scripts/preparation/index.phtml
+++ b/application/views/scripts/preparation/index.phtml
@@ -7,10 +7,11 @@
 		<table class="table table-striped">
 			<thead>
 				<tr>
-					<th>ID</th>
-					<th>Status</th>
-					<th>lpr_udf8</th>
-					<th>lpr_udf17</th>
+					<th>ID (lpr_udf1)</th>
+					<th>Status (lpr_udf2)</th>
+					<th>Priority (lpr_udf6)</th>
+					<th>Product (lpr_udf12)</th>
+					<th>Country (lpr_udf13)</th>
 				</tr>
 			</thead>
 			<tbody>
